--- a/style.css
+++ b/style.css
@@ -56,12 +56,14 @@ body{
 .modal-custom-content{
     background-color: #ebecf0;
     margin: auto;
-    width: 70%;
-    padding:30px;
+    width: 100%;
+    padding-right: 20px;;
+    padding-left:20px;
     border-radius: 10px;
 }
 
 .modal-custom.active{
+    padding:30px;
     z-index: 10;
     opacity: 1;
 }
@@ -146,6 +148,46 @@ body{
 .btn-circle:active{
     box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
 }
+
+.pieChart{
+    width: 300px;
+    height: 300px;
+    border-radius:100%;
+    position: relative;
+}
+.pieChart::after{
+    content:"";
+    position: absolute;
+    width:200px;
+    height: 200px;
+    left: 50px;
+    top: 50px;
+    z-index: 2;
+    background-color:white;
+    border-radius:50%;
+}
+
+@media only screen and (max-width: 576px){
+    .pieChart{
+        width:150px;
+        height: 150px;
+    }
+    .pieChart::after{
+        content:"";
+        position: absolute;
+        width:100px;
+        height: 100px;
+        left: 25px;
+        top: 25px;
+        z-index: 2;
+        background-color:white;
+        border-radius:50%;
+    }
+
+    
+    
+}
+
 
 
 
